test/spec_vectors/simd_i8x16_arith2/fail/module_22.wat
(module (func $i8x16.avgr_u-1st-arg-empty (result v128) (i8x16.avgr_u (v128.const i8x16 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0))))